<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.ApplyFragment"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/applySampleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:elevation="8dp"
        android:fontFamily="serif"
        android:padding="8dp"
        android:text="@string/apply_to_a_course"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@id/applyGuideLineOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/applySubmitButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:contentDescription="Apply Submit Button"
        android:elevation="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_go"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/applyGuideLineOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/applySampleTV"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/applyGuideLineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/applyNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/applyEmailTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applyGuideLineOne">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/applyNameTIE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/applyEmailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/applyCourseTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applyNameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/applyEmailTIE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/applyCourseTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applyEmailTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/applyCourseTIE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/course"
            android:inputType="textCapWords"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>