<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity"
    tools:ignore="HardcodedText">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="36dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@id/studentIDTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentIDTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/studentPasswordTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentIDTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_id"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentIDTIL"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentPasswordTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableEnd="@drawable/ic_go"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@id/signInGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentPasswordTIL" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signInGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/aboutTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="About"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feedBackTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInGuideLine"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/feedBackTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="Feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/applyTV"
        app:layout_constraintStart_toEndOf="@id/aboutTV"
        app:layout_constraintTop_toBottomOf="@id/signInGuideLine"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/applyTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="Apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/feedBackTV"
        app:layout_constraintTop_toBottomOf="@id/signInGuideLine"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>