<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp"
    tools:context=".fragment.FeedbackFragment"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/feedbackSampleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:elevation="8dp"
        android:fontFamily="serif"
        android:padding="8dp"
        android:text="@string/write_your_feedback"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@id/feedbackGuideLineOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/feedbackSubmitIV"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:contentDescription="Feedback Submit Button"
        android:elevation="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_go"
        app:layout_constraintBottom_toTopOf="@id/feedbackGuideLineOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/feedbackSampleTV"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorAccent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/feedbackGuideLineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedBackFeedbackTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/feedBackNameTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackGuideLineOne">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedBackFeedbackTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_feedback"
            android:inputType="textCapSentences"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedBackNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/feedBackEmailTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedBackFeedbackTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedBackNameTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedBackEmailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedBackNameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedBackEmailTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>